# cuda-samples

./: CMakeLists.txt
Samples/0_Introduction/simpleIPC/: simpleIPC.cu
